# intellij-rust-unofficial-plugin

./: .gitignore  CLAUDE.md  MIGRATION_PLAN.md  README.md  build.gradle.kts  gradle-241.properties  gradle-242.properties  gradle-243.properties  gradle-251.properties  gradle-252.properties  gradle-253.properties  gradle-261.properties  gradle.properties  settings.gradle.kts
.github/: dependabot.yml
.github/actions/load-native-binaries/: action.yml
.github/workflows/: auto-updates.yml  build-native-code.yml  build-plugin.yml  check.yml  get-rust-versions.yml  regressions-template.yml  regressions.json  rust-nightly.yml  rust-release.yml
attributes-info/: Cargo.toml
attributes-info/rustc_attr_data_structures/: Cargo.toml
attributes-info/rustc_attr_data_structures/src/: lib.rs
attributes-info/rustc_feature/: Cargo.toml  build.rs
attributes-info/rustc_feature/src/: lib.rs  unstable.rs
attributes-info/rustc_hir/: Cargo.toml
attributes-info/rustc_hir/src/: lib.rs
attributes-info/rustc_macros/src/: symbols.rs
attributes-info/rustc_span/: build.rs
attributes-info/rustc_span/src/: edition.rs  lib.rs  symbol.rs
attributes-info/src/: builtin_attributes.rs  compiler_features.rs  formatter.rs  main.rs
native-helper/: Cargo.toml
native-helper/src/: main.rs  proc_macro_server.rs
plugin/: build.gradle.kts
scripts/: update_compiler_features.py  update_lints.py  update_nightly.py  update_repl.py  update_stable.py
src/main/grammars/: RustLexer.flex  RustParser.bnf
src/main/resources/compiler-info/: builtin-attributes.json  compiler-features.json
(+234 files in other folders)
